src/tests/errors/lexing/reintegrate/test02.cmp
program main 
begin
    var x : int_  /* wrong identifier */
end 